# olca-ipc.py

./: .editorconfig  .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test.py  todo.md
doc/: Makefile  conf.py  example.py  index.rst  modules.rst
docs/: README.md  conf.py  example.py  example.rst  index.rst  make.bat
docs/olca/: index.html  ipc.html  pack.html  schema.html  upstream_tree.html
docs/olca/units/: index.html
docs/source/: modules.rst  olca.rst
examples/: rest_examples.py  results.ipynb  results.py
olca/: __init__.py  ipc.py  ipc_types.py  model.py  pack.py  result.py  schema.py  upstream_tree.py
olca/units/: __init__.py  units.csv
olca_ipc/: __init__.py  ipc.py  protocol.py  rest.py  result.py  upstream_tree.py  utree.py
scripts/: __init__.py  example.py  genmodel.py  makedoc.bat  model.py
tests/: config.py  example_calculation.py  test_allocation.py  test_analysis_groups.py  test_avoided_flows.py  test_crud.py  test_factory.py  test_get.py  test_json.py  test_mc_sim.py  test_model.py  test_other_props.py  test_param.py  test_process_links.py  test_qref.py  test_simple_calculation.py  test_units.py  test_upstream_tree.py  test_utree.py
