[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "olca-ipc"
version = "2.0.3"
description = "A package for calling openLCA functions from Python."
readme = "README.md"
requires-python = ">=3.11"
keywords=["openLCA", "life cycle assessment", "LCA"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
]
dependencies = [
    "olca-schema>=0.0.12",
    "requests>=2.28.1"
]

[project.urls]
"Homepage" = "https://github.com/GreenDelta/olca-ipc.py"
"Bug Tracker" = "https://github.com/GreenDelta/olca-ipc.py/issues"

[tool.setuptools.packages.find]
include = ["olca_ipc"]
exclude = ["tests"]
