[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "olca-ipc"
version = "2.6.3"
description = "A package for calling openLCA functions from Python."
readme = "README.md"
requires-python = ">=3.12"
keywords=["openLCA", "life cycle assessment", "LCA"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
]
dependencies = [
    "olca-schema>=2.6.2",
    "requests>=2.33.1"
]

[project.urls]
"Homepage" = "https://github.com/GreenDelta/olca-ipc.py"
"Bug Tracker" = "https://github.com/GreenDelta/olca-ipc.py/issues"

[tool.setuptools.packages.find]
include = ["olca_ipc"]
exclude = ["tests"]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]
packaging = [
    "build>=1.4",
    "twine>=6.2",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
# https://docs.astral.sh/ruff/rules/ambiguous-variable-name/#ambiguous-variable-name-e741
"tests/**/*.py" = ["E741"]
